fix(kdl-server): bump 1.42.1 and improve CRDs

--- a/charts/kdl-server/crds/project-operator-crd.yaml
+++ b/charts/kdl-server/crds/project-operator-crd.yaml
@@ -269,6 +269,7 @@ spec:
                       principle of least privilege.
                     type: object
                     additionalProperties: true
+                    x-kubernetes-preserve-unknown-fields: true
                     properties:
                       privileged:
                         description: |
@@ -1638,6 +1639,7 @@ spec:
                       principle of least privilege.
                     type: object
                     additionalProperties: true
+                    x-kubernetes-preserve-unknown-fields: true
                     properties:
                       privileged:
                         description: |
