fix(kdl-server): allow permissions over PVC

--- a/charts/kdl-server/templates/server/role.yaml
+++ b/charts/kdl-server/templates/server/role.yaml
@@ -14,14 +14,15 @@ rules:
     - secrets
     - serviceaccounts
     - pods
+    - persistentvolumeclaims
     verbs:
     - '*'
   # CRDs
   - apiGroups:
-    - "kdl.konstellation.io"
+    - kdl.konstellation.io
     resources:
-    - "kdlprojects"
-    - "kdlusertools"
+    - kdlprojects
+    - kdlusertools
     verbs:
     - '*'
 {{- end }}
